Fixed HTML formatting issue and broken CSS
Removed an obsolete tag in an HTML page and attempted to correct an issue where page elements disappear.

--- a/style001.css
+++ b/style001.css
@@ -231,4 +231,5 @@ a {
     left: 0;
     right: 0;
     bottom: 0;
+    top: 0;
 }
